--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
           <!--[if mso]>
           <p style="font-family: Arial, sans-serif; font-weight: normal; font-size: 16px; line-height: 18px; color: #4c4c4c; text-align: center; margin: 5px 0 10px 5px;"><a href="#">Add us to your address book</a></p>
           <![endif]-->
-          <p class="reduce-padding" style="font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; color: #4c4c4c; font-weight: 400; font-size: 16px; line-height: .3; margin: 0; padding: 5px 0 30px 5px;">
+          <p class="reduce-padding" style="font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; color: #4c4c4c; font-weight: 400; font-size: 16px; line-height: .3; margin: 0; padding: 5px 0 25px 5px;">
             <!--[if !mso]--><!--<![endif]-->
             <a href="#">Add us to your address book</a>
             <!--[if !mso]--><!--<![endif]-->
@@ -567,7 +567,7 @@
           <!--[if mso]>
           <p style="font-family: Arial, sans-serif; font-weight: normal; font-size: 10px; line-height: 18px; color: #4c4c4c; text-align: center; margin: 5px 0 7px 5px;">You can <a href="*|UPDATE_PROFILE|*" style="color: #4c4c4c; text-decoration: none;">update your preferences</a> or <a href="*|UNSUB|*" style="color: #4c4c4c; text-decoration: none;">unsubscribe from this list</a>.</p>
           <![endif]-->
-          <p style="font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; color: #4c4c4c; font-weight: 400; font-size: 12px; line-height: .3; margin: 0; padding: 5px 0 7px 5px;">
+          <p  style="font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif; color: #4c4c4c; font-weight: 400; font-size: 12px; line-height: .3; margin: 0; padding: 5px 0 15px 5px;">
             <!--[if !mso]--><!--<![endif]-->
             You can <a href="*|UPDATE_PROFILE|*" style="color: #4c4c4c; text-decoration: none;">
               <!--[if !mso]--><!--<![endif]-->
@@ -575,11 +575,11 @@
               <!--[if !mso]--><!--<![endif]-->
             </a>
             <!--[if !mso]--><!--<![endif]-->
-            or
+            &nbsp;or&nbsp;
             <!--[if !mso]--><!--<![endif]-->
             <a href="*|UNSUB|*" style="color: #4c4c4c; text-decoration: none;">
               <!--[if !mso]--><!--<![endif]-->
-              unsubscribe from this list
+              unsubscribe
               <!--[if !mso]--><!--<![endif]-->
             </a>
           </p>
